--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@ body {
   color: var(--primary-text-color);
 }
 
+.link-nav.current {
+  color: var(--accent-color);
+}
+
 .link-nav:hover,
 .link-nav:focus {
   color: var(--accent-color);
