--- a/css/style.css
+++ b/css/style.css
@@ -82,12 +82,18 @@ body {
 /* section-hero */
 
 .section-hero {
+  padding-top: 200px;
   text-align: center;
   background-color: #2f303a;
   color: #ffffff;
 }
 
 .title-hero {
+  margin-top: 0px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
@@ -96,6 +102,10 @@ body {
 }
 
 .button-hero {
+  margin-bottom: 200px;
+  padding: 10px 32px 10px 32px;
+  border-radius: 4px;
+  border: 0px solid #188ce8;
   background-color: var(--accent-color);
   color: #ffffff;
   cursor: pointer;
@@ -116,7 +126,7 @@ body {
   display: none;
 }
 
-.subtitle-advantages {
+.items-advantages .subtitle-advantages {
   color: var(--primary-text-color);
   font-size: 14px;
   line-height: 1.2;
@@ -184,6 +194,9 @@ body {
 /* Section filter */
 
 .button-filter {
+  padding: 6px 22px 6px 22px;
+  border-radius: 4px;
+  border-color: transparent;
   background-color: #f5f4fa;
   color: var(--primary-text-color);
   font-weight: 500;
