--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Змінні */
+
 :root {
   --primary-text-color: #212121;
   --text-color: #757575;
@@ -6,6 +8,8 @@
   --primary-color-white: #ffffff;
 }
 
+/* ГЛОБАЛЬНІ СТИЛІ */
+
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--text-color);
@@ -13,6 +17,29 @@ body {
   font-size: 14px;
   letter-spacing: 0.03em;
 }
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+/* відміняємо маркер списку */
+.list {
+  list-style: none;
+}
+
+/* відміняємо підкреслення посилань */
+.link-style {
+  text-decoration: none;
+}
+
+/* стилі для контейнерів */
+
+.containet {
+  max-width: 1200px;
+}
+
+/* Скидаю глобально зовнішні відступи  */
 
 h1,
 h2,
@@ -23,9 +50,23 @@ h6 {
   margin: 0px;
 }
 
+p {
+  margin: 0px;
+}
+
+ul {
+  margin: 0px;
+}
+
 /* Шапка */
+
+.nav-box {
+  display: flex;
+}
+
 .header-nav {
-  color: #ffffff;
+  color: var(--primary-color-white);
+  border-bottom: 1px solid #ececec;
 }
 
 .logo {
@@ -41,18 +82,9 @@ h6 {
   text-indent: 0%;
 }
 
-/* відміняємо маркер списку */
-.list {
-  list-style: none;
-}
-
-/* відміняємо підкреслення посилань */
-.link-style {
-  text-decoration: none;
-}
-
 .items-nav {
-  display: inline-block;
+  /* display: inline-block; */
+  display: flex;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
@@ -61,11 +93,13 @@ h6 {
 }
 
 .item-nav {
-  display: inline-block;
+  /* display: inline-block; */
+  display: flex;
 }
 
 nav {
-  display: inline-block;
+  /* display: inline-block; */
+  display: flex;
 }
 
 .link-nav {
@@ -90,8 +124,9 @@ nav {
   background-color: cornsilk;
 }
 
-.items-cont li {
-  display: inline-block;
+.items-cont {
+  /* display: inline-block; */
+  display: flex;
 }
 
 .link-mail,
@@ -112,11 +147,10 @@ nav {
   padding-top: 200px;
   text-align: center;
   background-color: #2f303a;
-  color: #ffffff;
+  color: var(--primary-color-white);
 }
 
 .title-hero {
-  margin-top: 0px;
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
@@ -134,7 +168,7 @@ nav {
   border-radius: 4px;
   border: 0px solid #188ce8;
   background-color: var(--accent-color);
-  color: #ffffff;
+  color: var(--primary-color-white);
   cursor: pointer;
   font-weight: 700;
   font-size: 16px;
@@ -149,18 +183,12 @@ nav {
 
 /*section our advantages */
 
-.section-advantages {
-  min-width: 1200px;
-}
-
 .title-hidden {
   display: none;
 }
 
 .items-advantages {
-  margin: 0px;
   padding: 94px 0;
-  min-width: 1200px;
 
   background-color: tomato;
 }
@@ -178,7 +206,6 @@ nav {
 }
 
 .subtitle-advantages {
-  margin-top: 0px;
   color: var(--primary-text-color);
   font-size: 14px;
   line-height: 1.2;
@@ -188,7 +215,6 @@ nav {
 }
 
 .text-advantages {
-  margin: 0px;
   padding-top: 10px;
   line-height: 1.7;
 
@@ -209,10 +235,10 @@ nav {
 
 .img-box {
   min-width: 1200px;
+  display: flex;
 }
 
 .title-section {
-  margin-top: 0px;
   margin-bottom: 50px;
   color: var(--primary-text-color);
   text-align: center;
@@ -230,8 +256,8 @@ nav {
 }
 
 .items-team {
-  margin-bottom: 0;
   padding-bottom: 94px;
+  display: flex;
 }
 
 .item-card {
@@ -260,7 +286,7 @@ nav {
 }
 
 .color-logo.lighter {
-  color: #ffffff;
+  color: var(--primary-color-white);
 }
 
 .items-addr {
@@ -271,7 +297,7 @@ nav {
 }
 
 .location {
-  color: #ffffff;
+  color: var(--primary-color-white);
 }
 
 .link-cont {
@@ -298,7 +324,7 @@ nav {
 .button-filter:hover,
 .button-filter:focus {
   background-color: var(--accent-color);
-  color: #ffffff;
+  color: var(--primary-color-white);
 }
 
 .subtitle-list {
