--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ p {
 
 ul {
   margin: 0px;
+  padding: 0px;
 }
 
 /* Шапка */
@@ -82,24 +83,38 @@ ul {
   text-indent: 0%;
 }
 
+.box-nav-links {
+  background-color: aquamarine;
+  min-width: 294px;
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
 .items-nav {
   /* display: inline-block; */
   display: flex;
+  justify-content: space-between;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
 
-  background-color: blanchedalmond;
+  background-color: rgb(255, 205, 209);
+}
+
+.box-items-cont {
+  margin-left: 331px;
+  margin-top: 32px;
 }
 
 .item-nav {
   /* display: inline-block; */
-  display: flex;
+  /* display: flex; */
 }
 
 nav {
   /* display: inline-block; */
   display: flex;
+  align-items: center;
 }
 
 .link-nav {
