--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,9 @@ img {
 
 /* стилі для контейнерів */
 
-.containet {
+.container {
   max-width: 1200px;
+  margin: auto;
 }
 
 /* Скидаю глобально зовнішні відступи  */
@@ -63,6 +64,7 @@ ul {
 
 .nav-box {
   display: flex;
+  justify-content: space-between;
 }
 
 .header-nav {
@@ -84,10 +86,11 @@ ul {
 }
 
 .box-nav-links {
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   min-width: 294px;
   margin-top: 32px;
   margin-bottom: 32px;
+  margin-left: 93px;
 }
 
 .items-nav {
@@ -98,7 +101,11 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
 
-  background-color: rgb(255, 205, 209);
+  /* background-color: rgb(255, 205, 209); */
+}
+
+.item-mail {
+  margin-right: 50px; /*Треба пофіксити margin для tel*/
 }
 
 .box-items-cont {
@@ -136,7 +143,7 @@ nav {
   line-height: 1.2;
   letter-spacing: 0.02em;
 
-  background-color: cornsilk;
+  /* background-color: cornsilk; */
 }
 
 .items-cont {
@@ -239,9 +246,9 @@ nav {
 /* section work */
 
 .section-work {
-  padding-top: 0px;
-  margin-top: 0px;
-  background-color: lawngreen;
+  /* padding-top: 0px;
+  margin-top: 0px; */
+  background-color: rgb(199, 209, 189);
 }
 
 .section-work .title-section {
@@ -249,8 +256,8 @@ nav {
 }
 
 .img-box {
-  min-width: 1200px;
   display: flex;
+  justify-content: space-between;
 }
 
 .title-section {
