--- a/css/style.css
+++ b/css/style.css
@@ -356,11 +356,23 @@ nav {
 /* ПОРТФОЛІО */
 
 /* Section filter */
+.filter-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 94px;
+  margin-bottom: 50px;
+}
+
+.filter-list .item-list:not(:first-child) {
+  margin-left: 8px;
+}
 
 .button-filter {
-  padding: 6px 22px 6px 22px;
+  padding: 6px 22px;
+  border: 0px;
   border-radius: 4px;
   border-color: transparent;
+
   background-color: #f5f4fa;
   color: var(--primary-text-color);
   font-weight: 500;
@@ -368,12 +380,35 @@ nav {
   line-height: 1.6;
   letter-spacing: 0.03em;
   text-align: center;
+  cursor: pointer;
 }
 
 .button-filter:hover,
 .button-filter:focus {
   background-color: var(--accent-color);
   color: var(--primary-color-white);
+}
+
+.box-portfolio {
+  margin-bottom: 94px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item-portfolio {
+  width: 370px;
+  border: 1px solid #eeeeee;
+}
+
+.item-portfolio:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+
+.item-portfolio:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
 }
 
 .subtitle-list {
