--- a/css/style.css
+++ b/css/style.css
@@ -269,22 +269,22 @@ nav {
 .section-work {
   /* padding-top: 0px;
   margin-top: 0px; */
-  background-color: rgb(199, 209, 189);
+  /* background-color: rgb(199, 209, 189); */
   margin: 0px;
 }
 
 .section-work .title-section {
   margin-bottom: 50px;
 
-  background-color: burlywood;
+  /* background-color: burlywood; */
 }
 
 .img-box {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 50px;
+  margin-bottom: 94px;
 
-  background-color: bisque;
+  /* background-color: bisque; */
 }
 
 .title-section {
@@ -302,15 +302,17 @@ nav {
 .section-team {
   background-color: #f5f4fa;
   text-align: center;
+  padding: 94px 0;
 }
 
 .items-team {
-  padding-bottom: 94px;
   display: flex;
 }
 
 .item-card {
-  display: inline-block;
+  /* display: inline-block; */
+  padding-bottom: 30px;
+  background-color: var(--primary-color-white);
   font-size: 16px;
   line-height: 1.2;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -323,6 +325,9 @@ nav {
 }
 
 .title-card {
+  margin-top: 30px;
+  margin-bottom: 10px;
+
   color: var(--primary-text-color);
   font-size: 16px;
   font-weight: 500;
