--- a/css/style.css
+++ b/css/style.css
@@ -403,14 +403,14 @@ nav {
 .item-portfolio {
   margin: 15px;
   /* width: 370px; */
-  width: calc(100% - 90px) / 3);  
+  width: calc((100% - 90px) / 3);
 }
 
 .item-portfolio:not(:nth-child(3n)) {
   margin-right: 15px;
 }
 
-/.item-portfolio:not(:nth-last-child(-n + 3)) {
+.item-portfolio:not(:nth-last-child(-n + 3)) {
   margin-bottom: 15px;
 }
 
