--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ ul {
 .header-nav {
   color: var(--primary-color-white);
   border-bottom: 1px solid #ececec;
+  padding: 32px 0;
 }
 
 .logo {
@@ -88,15 +89,9 @@ ul {
   text-indent: 0%;
 }
 
-.box-nav-links {
-  min-width: 294px;
-  margin-top: 32px;
-  margin-bottom: 32px;
-  margin-left: 93px;
-}
-
 .items-nav {
   display: flex;
+  margin-left: 93px;
 
   font-weight: 500;
   line-height: 1.2;
@@ -123,10 +118,6 @@ nav {
 .link-nav:hover,
 .link-nav:focus {
   color: var(--accent-color);
-}
-
-.box-items-cont {
-  display: flex;
 }
 
 .items-cont {
@@ -156,7 +147,7 @@ nav {
 /* SECTION-HERO */
 
 .section-hero {
-  padding-top: 200px;
+  padding: 200px 0;
   text-align: center;
 
   background-color: #2f303a;
@@ -177,7 +168,6 @@ nav {
 }
 
 .button-hero {
-  margin-bottom: 200px;
   padding: 10px 32px;
   border-radius: 4px;
   border: 0px solid #188ce8;
@@ -199,11 +189,15 @@ nav {
 /*SECTION OUR ADVANTAGES*/
 
 .section-advantages {
-  margin: 94px 0;
+  padding: 94px 0;
 }
 
-.title-hidden {
-  display: none;
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
 
 .items-advantages {
@@ -234,7 +228,7 @@ nav {
 /* section work */
 
 .section-work {
-  margin: 0px;
+  padding-bottom: 94px;
 }
 
 .section-work .title-section {
@@ -244,7 +238,7 @@ nav {
 .img-box {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 94px;
+  align-items: center;
 }
 
 .title-section {
@@ -269,7 +263,6 @@ nav {
 }
 
 .item-card {
-  padding-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -283,8 +276,11 @@ nav {
   margin-left: 30px;
 }
 
+.card-wrapper {
+  padding: 30px 0;
+}
+
 .title-card {
-  margin-top: 30px;
   margin-bottom: 10px;
 
   color: var(--primary-text-color);
@@ -330,10 +326,14 @@ nav {
 /* ПОРТФОЛІО */
 
 /* Section filter */
+
+.section-portfolio {
+  padding: 94px 0;
+}
+
 .filter-list {
   display: flex;
   justify-content: center;
-  margin-top: 94px;
   margin-bottom: 50px;
 }
 
@@ -361,10 +361,6 @@ nav {
 .button-filter:focus {
   background-color: var(--accent-color);
   color: var(--primary-color-white);
-}
-
-.box-portfolio {
-  margin-bottom: 94px;
 }
 
 /* 1 Варіант */
@@ -396,17 +392,16 @@ nav {
 
 .item-portfolio {
   margin: 15px;
-  /* width: 370px; */
-  width: calc((100% - 90px) / 3);
+  width: calc(100% / 3 -30px);
 }
 
-.item-portfolio:not(:nth-child(3n)) {
-  margin-right: 15px;
+/* .item-portfolio:not(:nth-child(3n)) {
+  margin-right: 15px; 
 }
 
 .item-portfolio:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 15px;
-}
+   margin-bottom: 15px; 
+} */
 
 .subtitle-content {
   border: 1px solid #eeeeee;
