--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ nav {
 
 .item-portfolio {
   margin: 15px;
-  width: calc(100% / 3 -30px);
+  width: calc(100% / 3 - 30px);
 }
 
 /* .item-portfolio:not(:nth-child(3n)) {
